adding logic navigation to ticket page

--- a/LaundryApps/Views/MainMenu.xaml
+++ b/LaundryApps/Views/MainMenu.xaml
@@ -47,7 +47,11 @@
                 Text="Lihat Semua"
                 FontSize="18"
                 TextColor="#F691CD"
-                FontFamily="AvenirBlack"/>
+                FontFamily="AvenirBlack">
+                <Label.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="LihatSemuaTapped"/>
+                </Label.GestureRecognizers>
+            </Label>
         </Grid>
         <!--Card View Promo-->
         <Grid Grid.Row="1" Margin="0,10,25,0">
@@ -208,35 +212,45 @@
             <Border.StrokeShape>
                 <RoundRectangle CornerRadius="45"/>
             </Border.StrokeShape>
-
             <Grid
                     HorizontalOptions="Fill"
                     VerticalOptions="Center"
                     RowDefinitions="Auto,Auto"
                     ColumnDefinitions="*,*,*"
                     RowSpacing="6">
-
                 <Image
                         WidthRequest="30"
                         HeightRequest="30"
                         Source="home.svg"
                         Grid.Row="0"
                         Grid.Column="0"
-                        HorizontalOptions="Center" />
+                        HorizontalOptions="Center">
+                    <Image.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="HomeTapped"/>
+                    </Image.GestureRecognizers>
+                </Image>
                 <Image
                         WidthRequest="30"
                         HeightRequest="30"
                         Source="ticket.svg"
                         Grid.Row="0"
                         Grid.Column="1"
-                        HorizontalOptions="Center" />
+                        HorizontalOptions="Center" >
+                    <Image.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="TicketTapped"/>
+                    </Image.GestureRecognizers>
+                </Image>
                 <Image
                         WidthRequest="30"
                         HeightRequest="30"
                         Source="history.svg"
                         Grid.Row="0"
                         Grid.Column="2"
-                        HorizontalOptions="Center" />
+                        HorizontalOptions="Center">
+                    <Image.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="HistoryTapped"/>
+                    </Image.GestureRecognizers>
+                </Image>
 
             </Grid>
         </Border>
