--- a/LaundryApps/Views/Ticket.xaml
+++ b/LaundryApps/Views/Ticket.xaml
@@ -2,9 +2,18 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="LaundryApps.Views.Ticket"
-             Title="Promo">
+             Title="Promo"
+             BackgroundColor="#F3F3F3"
+             Shell.NavBarIsVisible="False">
+
     <VerticalStackLayout>
+        <HorizontalStackLayout>
+            <ImageButton HeightRequest="80" Clicked="btnBack" WidthRequest="80" Margin="0,20" VerticalOptions="Center" Source="backicon.svg" />
+            <Label Text="Promo" FontSize="18" VerticalTextAlignment="Center" FontFamily="AvenirBlack" Margin="0,0,10,0" />
+        </HorizontalStackLayout>
         <Grid Grid.Row="1" Margin="25,10,25,0">
+
+            
             <CollectionView ItemsSource="{Binding Promos}">
                 <CollectionView.ItemsLayout>
                     <LinearItemsLayout ItemSpacing="25" Orientation="Vertical"/>
@@ -15,7 +24,7 @@
                             <Border
                                  HeightRequest="150"
                                  VerticalOptions="Center"
-                                 StrokeShape="RoundRectangle 20,20,20,20"
+                                 StrokeShape="RoundRectangle 30,30,30,30"
                                  WidthRequest="350">
                                 <Image Aspect="AspectFill" Source="{Binding Image}"/>
                             </Border>
