adding orderconfirmed layout

--- a/LaundryApps/Resources/Styles/Colors.xaml
+++ b/LaundryApps/Resources/Styles/Colors.xaml
@@ -13,6 +13,9 @@
     <Color x:Key="SecondaryDarkText">#9880e5</Color>
     <Color x:Key="Tertiary">#2B0B98</Color>
 
+    <Color x:Key="Background">#F3F3F3</Color>
+    <Color x:Key="Blue">#0457A6</Color>
+    
     <Color x:Key="White">White</Color>
     <Color x:Key="Black">Black</Color>
     <Color x:Key="Magenta">#D600AA</Color>
