--- a/LaundryApps/Views/Order.xaml
+++ b/LaundryApps/Views/Order.xaml
@@ -6,6 +6,7 @@
              Title="Order"
              Shell.NavBarIsVisible="False"
              BackgroundColor="#F3F3F3">
+
     <VerticalStackLayout>
         <HorizontalStackLayout>
             <ImageButton Clicked="btnBack" HeightRequest="80"  WidthRequest="80" Margin="0,20" VerticalOptions="Center" Source="backicon.svg" />
@@ -19,24 +20,14 @@
             StrokeThickness="0"
             StrokeShape="RoundRectangle 30,30,30,30"
             VerticalOptions="Center"                
-            BackgroundColor="White"
+            Background="White"
             >
                 <VerticalStackLayout>
                     <HorizontalStackLayout>
                         <Label Text="Alamat Penjemputan" Margin="10,15" FontSize="18" FontFamily="AvenirBook"/>
-                        <Border 
-                            Margin="40,0"
-                            WidthRequest="86" HeightRequest="31" 
-                            StrokeThickness="1"
-                            StrokeShape="RoundRectangle 30,30,30,30"
-                            Stroke="#F691CD">
-                            <Border.GestureRecognizers>
-                                <!-- <TapGestureRecognizer Tapped="GantiAlamat"/>-->
-                            </Border.GestureRecognizers>
-                            <Label Text="Ganti Alamat" FontSize="12" FontFamily="AvenirBook" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"/>
-                        </Border>
+
                     </HorizontalStackLayout>
-                    <Label Text="Jl.Umban Sari" Margin="10,0" FontSize="20" FontFamily="AvenirBlack"/>
+                    <Entry Placeholder="Masukkan alamat" Margin="10,0" FontSize="20" FontFamily="AvenirBlack"/>
                 </VerticalStackLayout>
             </Border>
         </Grid>
@@ -44,98 +35,132 @@
         <Label Margin="25,25" Text="Pilih hari penjemputan" FontSize="16" FontFamily="AvenirBlack"/>
 
         <HorizontalStackLayout>
-            <Border 
-                Margin="25,0,15,0"
-                Background="White"
-                WidthRequest="65"
-                HeightRequest="61"
-                StrokeThickness="0"
-                StrokeShape="RoundRectangle 10,10,10,10">
-                <VerticalStackLayout>
-                    <Label x:Name="month" Text="Mar" HorizontalOptions="Center" />
-                    <Label x:Name="date" Text="25" HorizontalOptions="Center"/>
-                    <Label x:Name="day" Text="Senin" HorizontalOptions="Center"/>
-                </VerticalStackLayout>
-            </Border>
-            <Border 
-                Margin="15,0"
-                Background="White"
-                WidthRequest="65"
-                HeightRequest="61"
-                StrokeThickness="0"
-                StrokeShape="RoundRectangle 10,10,10,10">
-                <VerticalStackLayout>
-                    <Label x:Name="month2" Text="Mar" HorizontalOptions="Center" />
-                    <Label x:Name="date2" Text="26" HorizontalOptions="Center"/>
-                    <Label x:Name="day2" Text="Selasa" HorizontalOptions="Center"/>
-                </VerticalStackLayout>
-            </Border>
-            <Border 
-                Margin="15,0"
-                Background="White"
-                WidthRequest="65"
-                HeightRequest="61"
-                StrokeThickness="0"
-                StrokeShape="RoundRectangle 10,10,10,10">
-                <VerticalStackLayout>
-                    <Label x:Name="month3" Text="Mar" HorizontalOptions="Center" />
-                    <Label x:Name="date3" Text="27" HorizontalOptions="Center"/>
-                    <Label x:Name="day3" Text="Rabu" HorizontalOptions="Center"/>
-                </VerticalStackLayout>
-            </Border>
-            <Border 
-                Margin="15,0"
-                Background="White"
-                WidthRequest="65"
-                HeightRequest="61"
-                StrokeThickness="0"
-                StrokeShape="RoundRectangle 10,10,10,10">
-                <VerticalStackLayout>
-                    <Label x:Name="month4" Text="Mar" HorizontalOptions="Center" />
-                    <Label x:Name="date4" Text="28" HorizontalOptions="Center"/>
-                    <Label x:Name="day4" Text="Kamis" HorizontalOptions="Center"/>
-                </VerticalStackLayout>
-            </Border>
+            <Frame 
+    x:Name="frame1"
+    Margin="25,0,15,0"
+    BackgroundColor="{Binding BorderColor}"        
+    WidthRequest="65"
+    HeightRequest="65"
+    CornerRadius="10"
+    Padding="5">
+                <Frame.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="BorderTapped" CommandParameter="{x:Reference frame1}" />
+                </Frame.GestureRecognizers>
+                <StackLayout>
+                    <Label Text="{Binding Day}" HorizontalOptions="Center" />
+                    <Label Text="{Binding Month}" HorizontalOptions="Center" />
+                    <Label Text="{Binding Date}" HorizontalOptions="Center" />
+                </StackLayout>
+            </Frame>
+            <Frame 
+    x:Name="frame2"
+    Margin="10,0,15,0"
+    BackgroundColor="{Binding BorderColor2}"        
+    WidthRequest="65"
+    HeightRequest="65"
+    CornerRadius="10"
+    Padding="5">
+                <Frame.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="BorderTapped" CommandParameter="{x:Reference frame2}" />
+                </Frame.GestureRecognizers>
+                <StackLayout>
+                    <Label Text="{Binding NextDay}" HorizontalOptions="Center" />
+                    <Label Text="{Binding Month}" HorizontalOptions="Center" />
+                    <Label Text="{Binding NextDate}" HorizontalOptions="Center" />
+                </StackLayout>
+            </Frame>
+            <Frame 
+    x:Name="frame3"
+    Margin="10,0,15,0"
+    BackgroundColor="{Binding BorderColor3}"        
+    WidthRequest="65"
+    HeightRequest="65"
+    CornerRadius="10"
+    Padding="5">
+                <Frame.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="BorderTapped" CommandParameter="{x:Reference frame3}" />
+                </Frame.GestureRecognizers>
+                <StackLayout>
+                    <Label Text="{Binding NextDay2}" HorizontalOptions="Center" />
+                    <Label Text="{Binding Month}" HorizontalOptions="Center" />
+                    <Label Text="{Binding NextDate2}" HorizontalOptions="Center" />
+                </StackLayout>
+            </Frame>
+            <Frame 
+    x:Name="frame4"
+    Margin="10,0,15,0"
+    BackgroundColor="{Binding BorderColor4}"        
+    WidthRequest="65"
+    HeightRequest="65"
+    CornerRadius="10"
+    Padding="5">
+                <Frame.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="BorderTapped" CommandParameter="{x:Reference frame4}" />
+                </Frame.GestureRecognizers>
+                <StackLayout>
+                    <Label Text="{Binding NextDay3}" HorizontalOptions="Center" />
+                    <Label Text="{Binding Month}" HorizontalOptions="Center" />
+                    <Label Text="{Binding NextDate3}" HorizontalOptions="Center" />
+                </StackLayout>
+            </Frame>
         </HorizontalStackLayout>
-        
+
+
+
         <!--Jam Jemput-->
         <Label Text="Pilih jam penjemputan" Margin="25,25" FontSize="16" FontFamily="AvenirBlack"/>
         <HorizontalStackLayout>
             <Border
+            x:Name="jam10"
              Margin="25,0,10,0"
-             Background="White"
+             Background="{Binding SelectedBorderColor}"
              WidthRequest="70"
              HeightRequest="27"
              StrokeThickness="0"
              StrokeShape="RoundRectangle 10,10,10,10">
+                <Border.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="TimeTapped"/>
+                </Border.GestureRecognizers>
                 <Label Text="10:00" HorizontalOptions="Center" VerticalOptions="Center"/>
             </Border>
             <Border
+                x:Name="jam12"
              Margin="10,0"
-             Background="White"
+             Background="{Binding SelectedBorderColor}"
              WidthRequest="70"
              HeightRequest="27"
              StrokeThickness="0"
              StrokeShape="RoundRectangle 10,10,10,10">
-                <Label Text="10:00" HorizontalOptions="Center" VerticalOptions="Center"/>
+                <Border.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="TimeTapped"/>
+                </Border.GestureRecognizers>
+                <Label Text="12:00" HorizontalOptions="Center" VerticalOptions="Center"/>
             </Border>
             <Border
+                x:Name="jam13"
              Margin="10,0"
-             Background="White"
+             Background="{Binding SelectedBorderColor}"
              WidthRequest="70"
              HeightRequest="27"
              StrokeThickness="0"
              StrokeShape="RoundRectangle 10,10,10,10">
-                <Label Text="10:00" HorizontalOptions="Center" VerticalOptions="Center"/>
+                <Border.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="TimeTapped"/>
+                </Border.GestureRecognizers>
+                <Label Text="13:00" HorizontalOptions="Center" VerticalOptions="Center"/>
             </Border>
             <Border
+                x:Name="jam15"
              Margin="10,0"
-             Background="White"
+            Background="{Binding SelectedBorderColor}"
              WidthRequest="70"
              HeightRequest="27"
              StrokeThickness="0"
              StrokeShape="RoundRectangle 10,10,10,10">
-                <Label Text="10:00" HorizontalOptions="Center" VerticalOptions="Center"/>
+                <Border.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="TimeTapped"/>
+                </Border.GestureRecognizers>
+                <Label Text="15:00" HorizontalOptions="Center" VerticalOptions="Center"/>
             </Border>
         </HorizontalStackLayout>
         <Label FontSize="16" FontFamily="AvenirBlack" Text="Jenis Paket" Margin="25,25"/>
@@ -154,7 +179,7 @@
                 </Picker.ItemsSource>
             </Picker>
         </Border>
-        
+
         <Label FontSize="16" FontFamily="AvenirBlack" Text="Layanan" Margin="25,25" />
         <Border 
               StrokeShape="RoundRectangle 20,20,20"
